# FON.python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
fon/: __init__.py
tests/: test_fon.py  test_fon_extended.py
