[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "FastObjectNotation"
version = "0.3.0"
description = "Fast Object Notation — a fast, human-readable serialization format"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["fon", "serialization", "fast", "object", "notation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Source = "https://github.com/FastObjectNotation/FON.python"
Tracker = "https://github.com/FastObjectNotation/FON.python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fon*"]

[tool.setuptools.package-data]
fon = ["fon_native.*", "libfon_native.*"]
